--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,14 +1,13 @@
 <header>
     <nav>
-        <div class="logo">Festival Logo</div>
+        <div class="logo">University Services</div>
         <ul>
-            <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Course registration</a></li>
-                <li><a href="#">Festival</a></li>
-                <li><a href="{{ url_for('home') }}">Login</a></li>
-            </ul>
+            <li><a href="{{ url_for('redirect_to_main') }}">Home</a></li>
+            <li><a href="{{ url_for('home') }}">Festival</a></li>
+            <li><a href="{{ url_for('redirect_to_news') }}">News</a></li>
+            <li><a href="{{ url_for('redirect_to_course') }}">Course registration</a></li>
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
         </ul>
     </nav>
 </header>
+
